Rust: turing machine finished

--- a/TuringMachineCPP/test.yaml
+++ b/TuringMachineCPP/test.yaml
@@ -1,23 +1,20 @@
-﻿# A 6 state busy beaver
+﻿# A 5 state busy beaver
 blank: 'B'
 start state: A
 table:
   A:
     'B': {write: 1, R: B}
-    1: {write: 1, R: A}
+    1:   {write: 1, L: C}
   B:
-    'B': {write: 1, L: C}
-    1: {write: 1, L: B}
+    'B': {write: 1, R: C}
+    1:   {write: 1, R: B}
   C:
-    'B': {write: 'B', R: F}
-    1: {write: 1, L: D}
+    'B': {write: 1, R: D}
+    1:   {write: 'B', L: E}
   D:
-    'B': {write: 1, R: A}
-    1 : {write: 'B', L: E}
+    'B': {write: 1, L: A}
+    1:   {write: 1, L: D}
   E:
-    'B': {write: 1, L: h}
-    1: {write: 1, L: F}
+    'B': {write: 1, R: h}
+    1:   {write: 'B', L: A}
   h:
-  F:
-    'B': {write: 'B', L: A}
-    1: {write: 'B', L: C}
