--- a/TuringMachineCPP/test.yaml
+++ b/TuringMachineCPP/test.yaml
@@ -1,20 +1,23 @@
-﻿# A 5 state busy beaver
+﻿# A 6 state busy beaver
 blank: 'B'
 start state: A
 table:
   A:
     'B': {write: 1, R: B}
-    1:   {write: 1, L: C}
+    1: {write: 1, R: A}
   B:
-    'B': {write: 1, R: C}
-    1:   {write: 1, R: B}
+    'B': {write: 1, L: C}
+    1: {write: 1, L: B}
   C:
-    'B': {write: 1, R: D}
-    1:   {write: 'B', L: E}
+    'B': {write: 'B', R: F}
+    1: {write: 1, L: D}
   D:
-    'B': {write: 1, L: A}
-    1:   {write: 1, L: D}
+    'B': {write: 1, R: A}
+    1 : {write: 'B', L: E}
   E:
-    'B': {write: 1, R: h}
-    1:   {write: 'B', L: A}
+    'B': {write: 1, L: h}
+    1: {write: 1, L: F}
   h:
+  F:
+    'B': {write: 'B', L: A}
+    1: {write: 'B', L: C}
