--- a/turing_machine/Cargo.toml
+++ b/turing_machine/Cargo.toml
@@ -9,3 +9,17 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+criterion = "0.3"
+
+[profile.bench]
+opt-level = 3
+debug = 0
+panic = "abort"
+codegen-units = 1
+debug-assertions = false
+overflow-checks = false
+
+
+[[bench]]
+name = "my_benchmark"
+harness = false
