--- a/turing_machine_c/turing_machine_c.vcxproj
+++ b/turing_machine_c/turing_machine_c.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="turing_machine_c.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="turing_machine_c.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
